=======
CHANGES
=======

1.2 (unreleased)
================

- Nothing changed yet.


1.1 (2019-01-22)
================

Backwards incompatible changes
------------------------------

- Drop support for Python 2.6, 3.2 and 3.3.

Other changes
-------------

- Add support for Python 3.5, 3.6 and 3.7.


1.0.0 (2018-01-16)
==================
- Fixup tests for new versions of dependencies and changed contracts. This
  also improves Python 3 compatibility.

1.0a7 (2015-11-07)
==================

- Make sure the registry is prepared if only the publisher is used
  within a process.

- Fix bug with rollups and slots.

1.0a6 (2015-10-21)
==================

- Allow dependencies of a Resources or a Group to be modified after
  being defined, but yet before being used. This allows to add
  optional dependencies then needed to generically defined
  packages. This required a complete re-factoring of the dependency
  mechanism.

- Fix slot so they can be used then a compiler is defined.

- Remove fanstatic.codegen. That was not applicable in enough cases.


1.0a5 (2014-02-09)
==================

- Fix issue #87 "install-error-with-python3":

  Fanstatic now depends on shutil.which when it's available
  (Python 3.3+) or uses shutilwhich library in other cases. This
  is useful because which.py is no longer supported.

  Thanks to Ivan Bulanov.

1.0a4 (2013-09-24)
==================

- Also setup the injector for HEAD requests. We don't want the app which we
  are wrapping to choke on the NotImplementedError raised by
  DummyNeededResources.

- Update entry points in order to use the fanstatic Publisher used as an
  application instead of a filter, for instance in a configuration
  with paste.urlmap.

  http://pythonpaste.org/modules/urlmap.html

1.0a3 (2013-08-12)
==================

- Refactor NeededResources into a pluggable injector system. Fanstatic users
  now have the possibility to customize how resources are injected into the
  HTML.
