@@ -1,5 +1,3 @@
-syntax: glob
-
 *.egg-info
 *.pyc
 *.swp
