@@ -1,13 +1,0 @@
-# This image does not come with Java installed, so we do it manually.
-image: saaj/snake-tank
-
-pipelines:
-  default:
-    - step:
-        caches:
-          - pip
-        script:
-          - apt-get update && apt-get install -y openjdk-8-jdk && apt-get install -y ant && apt-get clean
-          - apt-get install ca-certificates-java && apt-get clean && update-ca-certificates -f
-          - export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64/
-          - tox
